hturner published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -293,6 +293,7 @@ In Ubuntu you can use :
 \NormalTok{      libx11{-}dev }\DataTypeTok{\textbackslash{}}
 \NormalTok{      libxt{-}dev }\DataTypeTok{\textbackslash{}}
 \NormalTok{      mpack }\DataTypeTok{\textbackslash{}}
+\NormalTok{      rsync }\DataTypeTok{\textbackslash{}}
 \NormalTok{      tcl8.6{-}dev }\DataTypeTok{\textbackslash{}}
 \NormalTok{      texinfo }\DataTypeTok{\textbackslash{}}
 \NormalTok{      texlive{-}base }\DataTypeTok{\textbackslash{}}
@@ -310,6 +311,52 @@ In Ubuntu you can use :
 \NormalTok{      xfonts{-}base }\DataTypeTok{\textbackslash{}}
 \NormalTok{      xvfb }\DataTypeTok{\textbackslash{}}
 \NormalTok{      zlib1g{-}dev }
+\end{Highlighting}
+\end{Shaded}
+
+\hypertarget{fedora}{%
+\subsection{Fedora}\label{fedora}}
+
+In Fedora you can use:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{sudo}\NormalTok{ dnf install }\AttributeTok{{-}y} \DataTypeTok{\textbackslash{}}
+\NormalTok{    autoconf }\DataTypeTok{\textbackslash{}}
+\NormalTok{    automake }\DataTypeTok{\textbackslash{}}
+\NormalTok{    bzip2{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    cairo{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    flexiblas{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    gcc{-}c++ }\DataTypeTok{\textbackslash{}}
+\NormalTok{    gcc{-}gfortran }\DataTypeTok{\textbackslash{}}
+\NormalTok{    java{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    less }\DataTypeTok{\textbackslash{}}
+\NormalTok{    libICE{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    libSM{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    libX11{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    libXmu{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    libXt{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    libcurl{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    libicu{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    libjpeg{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    libpng{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    libtiff{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    libtool }\DataTypeTok{\textbackslash{}}
+\NormalTok{    ncurses{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    pango{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    pcre2{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    readline{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    rsync }\DataTypeTok{\textbackslash{}}
+\NormalTok{    tcl{-}devel }\DataTypeTok{\textbackslash{}}
+    \StringTok{\textquotesingle{}tex(inconsolata.sty)\textquotesingle{}} \DataTypeTok{\textbackslash{}}
+    \StringTok{\textquotesingle{}tex(latex)\textquotesingle{}} \DataTypeTok{\textbackslash{}}
+    \StringTok{\textquotesingle{}tex(upquote.sty)\textquotesingle{}} \DataTypeTok{\textbackslash{}}
+\NormalTok{    texinfo{-}tex }\DataTypeTok{\textbackslash{}}
+\NormalTok{    tk{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    tre{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    valgrind{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    xz{-}devel }\DataTypeTok{\textbackslash{}}
+\NormalTok{    zlib{-}devel}
 \end{Highlighting}
 \end{Shaded}
 
