SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2022-11-29}
+\date{2022-11-30}
 
 \begin{document}
 \maketitle
@@ -891,7 +891,7 @@ There is also a section for Common Queries on the home page which includes links
 \hypertarget{preparing-to-review-bug-reports}{%
 \subsection{Preparing to review bug reports}\label{preparing-to-review-bug-reports}}
 
-If you want to review bug reports on Bugzilla, you are required to have a Bugzilla account. To get a Bugzilla account send an e-mail to \texttt{bug-report-request@r-project.org} from the address you want to use as your Bugzilla login. Briefly explain why you want a Bugzilla account and a volunteer will add you to R's Bugzilla members. More details on how you can review a bug report are available on this \href{https://developer.r-project.org/Blog/public/2019/10/09/r-can-use-your-help-reviewing-bug-reports/}{blog}
+If you want to review bug reports on Bugzilla, you are required to have a Bugzilla account. To get a Bugzilla account send an e-mail to \texttt{bug-report-request@r-project.org} from the address you want to use as your Bugzilla login. Briefly explain why you want a Bugzilla account and a volunteer will add you to R's Bugzilla members. More details on how you can review a bug report are available on this \href{https://blog.r-project.org/2019/10/09/r-can-use-your-help-reviewing-bug-reports/index.html}{blog}
 
 \hypertarget{classifying-bug-reports}{%
 \section{Classifying bug reports}\label{classifying-bug-reports}}
@@ -947,7 +947,7 @@ There is a \texttt{\#bug-reporting} channel on the \href{https://r-contributors.
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  \href{https://developer.r-project.org/Blog/public/2019/10/09/r-can-use-your-help-reviewing-bug-reports/}{Reviewing bug reports: Blog}
+  \href{https://blog.r-project.org/2019/10/09/r-can-use-your-help-reviewing-bug-reports/index.html}{Reviewing bug reports: Blog}
 \end{enumerate}
 
 \hypertarget{FindSource}{%
