SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -1564,7 +1564,7 @@ They are stored in the R sources at \texttt{./src/library/translations/inst} in 
 \hypertarget{TestRVer}{%
 \chapter{Testing Pre-release R Versions}\label{TestRVer}}
 
-This chapter is inspired from the blog on \href{https://developer.r-project.org/Blog/public/2021/04/28/r-can-use-your-help-testing-r-before-release/index.html}{testing R before release} and discusses how you can help with testing of pre-release versions of R.
+This chapter is inspired from the blog on \href{https://blog.r-project.org/2021/04/28/r-can-use-your-help-testing-r-before-release/index.html}{testing R before release} and discusses how you can help with testing of pre-release versions of R.
 
 \hypertarget{where-to-test}{%
 \section{Where to test?}\label{where-to-test}}
@@ -1574,7 +1574,7 @@ Whenever possible use a fresh package library for testing, even better would be 
 \hypertarget{VM}{%
 \subsection{Virtual machine}\label{VM}}
 
-A free Windows 10 virtual machine is provided by Microsoft (with a 90-day limit) for building, testing, and checking R packages and R itself. Package maintainers who work on Linux and MacOS can use it to test their packages on Windows. Read the \href{https://svn.r-project.org/R-dev-web/trunk/WindowsBuilds/winutf8/ucrt3/vm.html}{instructions} on how to automatically set up the machine to check R packages. Tomas Kalibera describes the details of using virtual machine in the blog \href{https://developer.r-project.org/Blog/public/2021/03/18/virtual-windows-machine-for-checking-r-packages/index.html}{Virtual Windows machine for checking R packages}.
+A free Windows 10 virtual machine is provided by Microsoft (with a 90-day limit) for building, testing, and checking R packages and R itself. Package maintainers who work on Linux and MacOS can use it to test their packages on Windows. Read the \href{https://svn.r-project.org/R-dev-web/trunk/WindowsBuilds/winutf8/ucrt3/vm.html}{instructions} on how to automatically set up the machine to check R packages. Tomas Kalibera describes the details of using virtual machine in the blog \href{https://blog.r-project.org/2021/03/18/virtual-windows-machine-for-checking-r-packages/index.html}{Virtual Windows machine for checking R packages}.
 
 \hypertarget{what-can-you-test}{%
 \section{What can you test?}\label{what-can-you-test}}
@@ -1598,13 +1598,13 @@ Details of performing testing on various operating systems:
 
 \begin{itemize}
 \item
-  \href{https://developer.r-project.org/Blog/public/2021/04/28/r-can-use-your-help-testing-r-before-release/index.html\#on-windows}{Windows}
+  \href{https://blog.r-project.org/2021/04/28/r-can-use-your-help-testing-r-before-release/index.html\#on-windows}{Windows}
 \item
-  \href{https://developer.r-project.org/Blog/public/2021/04/28/r-can-use-your-help-testing-r-before-release/index.html\#on-macos}{macOS}
+  \href{https://blog.r-project.org/2021/04/28/r-can-use-your-help-testing-r-before-release/index.html\#on-macos}{macOS}
 \item
-  \href{https://developer.r-project.org/Blog/public/2021/04/28/r-can-use-your-help-testing-r-before-release/index.html\#on-linux}{Linux}
+  \href{https://blog.r-project.org/2021/04/28/r-can-use-your-help-testing-r-before-release/index.html\#on-linux}{Linux}
 \item
-  \href{https://developer.r-project.org/Blog/public/2021/04/28/r-can-use-your-help-testing-r-before-release/index.html\#on-solaris}{Solaris}
+  \href{https://blog.r-project.org/2021/04/28/r-can-use-your-help-testing-r-before-release/index.html\#on-solaris}{Solaris}
 \end{itemize}
 
 \hypertarget{writing-tests-for-r}{%
