SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -1771,7 +1771,7 @@ Here are some resources that can be useful to keep up with the developments in R
 \hypertarget{blogs}{%
 \section{Blogs}\label{blogs}}
 
-The \href{https://www.r-project.org/}{R project} maintains a list of public \href{https://developer.r-project.org/Blog/public/}{blogs} mainly written by the R Core Development Team. Daily news about R-devel can be found \href{https://developer.r-project.org/blosxom.cgi/R-devel}{here}.
+The \href{https://www.r-project.org/}{R project} maintains a list of public \href{https://blog.r-project.org/}{blogs} mainly written by the R Core Development Team. Daily news about R-devel can be found on the \href{https://developer.r-project.org/blosxom.cgi/R-devel}{Daily News about R-devel} blog which is updated daily.
 
 \hypertarget{conferences}{%
 \section{Conferences}\label{conferences}}
