hturner published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2022-11-30}
+\date{2022-12-01}
 
 \begin{document}
 \maketitle
@@ -1771,7 +1771,7 @@ Here are some resources that can be useful to keep up with the developments in R
 \hypertarget{blogs}{%
 \section{Blogs}\label{blogs}}
 
-The \href{https://www.r-project.org/}{R project} maintains a list of public \href{https://blog.r-project.org/}{blogs} mainly written by the R Core Development Team. Daily news about R-devel can be found on the \href{https://developer.r-project.org/blosxom.cgi/R-devel}{Daily News about R-devel} blog which is updated daily.
+The \href{https://www.r-project.org/}{R project} maintains \href{https://blog.r-project.org/}{The R Blog} with posts mainly written by the R Core Team. News of changes in the development version of R found on the \href{https://developer.r-project.org/blosxom.cgi/R-devel}{Daily News about R-devel} blog which is updated daily.
 
 \hypertarget{conferences}{%
 \section{Conferences}\label{conferences}}
@@ -1797,7 +1797,7 @@ Updates about conferences actively supported or endorsed by The R Foundation can
 \hypertarget{twitter}{%
 \section{Twitter}\label{twitter}}
 
-Follow \href{https://twitter.com/R_dev_news}{@R\_dev\_news} on Twitter for the \href{https://developer.r-project.org/RSSfeeds.html}{R development updates} and \href{https://developer.r-project.org/Blog/public/}{blog post} announcements.
+Follow \href{https://twitter.com/R_dev_news}{@R\_dev\_news} on Twitter for news of \href{https://developer.r-project.org/RSSfeeds.html}{changes in the development version of R} and new posts on \href{https://blog.r-project.org/}{The R Blog} announcements.
 
 \hypertarget{DevTools}{%
 \chapter{Developer Tools}\label{DevTools}}
