SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2022-12-01}
+\date{2022-12-02}
 
 \begin{document}
 \maketitle
@@ -155,8 +155,8 @@ This project is licensed under a \href{https://creativecommons.org/licenses/by/4
 
 This guide is a comprehensive resource for contributing to base R\footnote{The \href{https://cran.r-project.org/doc/FAQ/R-FAQ.html\#Add_002don-packages-in-R}{set of packages} in the base R distribution that are maintained by the R Core Team.} -- for both new and experienced contributors. It is maintained by the \href{/working-group}{R Contribution Working Group}. We welcome your contributions to base R!
 
-\hypertarget{overview-of-different-ways-of-contributing-to-base-r-project}{%
-\section{Overview of different ways of contributing to base R Project}\label{overview-of-different-ways-of-contributing-to-base-r-project}}
+\hypertarget{overview-of-different-ways-of-contributing-to-the-base-r-project}{%
+\section{Overview of different ways of contributing to the base R Project}\label{overview-of-different-ways-of-contributing-to-the-base-r-project}}
 
 Contributions to base R are possible in a number of different ways. Some of them are listed below:
 
